examples/test/testpolicy5745.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5745
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key8: value29
      key15: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value37
          key30: value4
      podSelector:
        matchLabels:
          key45: value39
          key14: value41
